cppreport.txt
Checking Results.csv ...
Results.csv:3:43: error: syntax error [syntaxError]
Naga Sai Jyothi,naga.jaladi@ltts.com,https://github.com/99002575/Shell_Scripting.git,success,success,success
                                          ^
1/4 files checked 53% done
Checking sqr.c ...
2/4 files checked 62% done
Checking sum.c ...
3/4 files checked 72% done
Checking test.c ...
4/4 files checked 100% done
